# testProject

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
personApi/: apps.py  filters.py  models.py  renderer.py  urls.py  views.py
personApi/management/commands/: populate_database.py
personApi/migrations/: 0001_initial.py
testProject/: settings.py  urls.py
